fixed input spacing:

--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ body {
 }
 
 #textInput {
-    width: 70%;
+    width: 75%;
 }
 
 .button {
